fix: add logic koios for pool apis relate